package edu.hitsz.aircraft;

public interface AAFactory {
    public abstract AbstractAircraft creatAircraft();
}
