@startuml
'https://plantuml.com/sequence-diagram

abstract class AbstractAircraft
{
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)

 }

 class MobEnemy {
     + MobEnemy()

 }
 AbstractAircraft <|-- MobEnemy

class EliteEnemy {

    + EliteEnemy()

}
AbstractAircraft <|-- EliteEnemy

class ElitePlus {

    + ElitePlus()

}
AbstractAircraft <|-- ElitePlus

class Boss {

    + Boss()

}
AbstractAircraft <|-- Boss

interface AAFactory {
    + {abstract} creatAircraft():AbstractAircraft
}
AAFactory ..> AbstractAircraft

class EEFactory{
    + creatAircraft():EliteEnemy
}
AAFactory <|.. EEFactory

class MEFactory{
    + creatAircraft():AbstractAircraft
}
AAFactory <|.. MEFactory

class EPFactory{
    + creatAircraft():AbstractAircraft
}
AAFactory <|.. EPFactory

class BFactory{
    + creatAircraft():AbstractAircraft
}
AAFactory <|.. BFactory
@enduml